[package]
name = "site"
version = "0.1.0"
edition = "2024"

[dependencies]
include_directory = "0.1.1"
katex = "0.4.6"
markdown-it = "0.6.1"
markdown-it-autolink = "0.2.0"
markdown-it-footnote = "0.2.0"
markdown-it-front-matter = "0.3.0"
markdown-it-heading-anchors = "0.3.0"
markdown-it-tasklist = "0.2.0"
markup = "0.15.0"
salvo = "0.79.0"
saphyr = { version = "0.0.4", features = [] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
