[package]
name = "generator"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
components = { path = "../components" }
include_dir = "0.7.4"
katex = "0.4.6"
markdown-it = "0.6.1"
markdown-it-autolink = "0.2.0"
markdown-it-footnote = "0.2.0"
markdown-it-front-matter = "0.3.0"
markdown-it-heading-anchors = "0.3.0"
markdown-it-tasklist = "0.2.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
yaml-rust2 = { version = "0.10.2", features = [] }
