[package]
name = "site"
version = "0.1.0"
edition = "2024"

[dependencies]
components = { path = "../components" }
generator = { path = "../generator" }
include_dir = "0.7.4"
phf = { version = "0.11.3", features = ["macros"] }
salvo = "0.79.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
